fix: fix depricated